<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="dream_title_hint">Enter a title for the dream.</string>
    <string name="dream_title_label">TITLE</string>
    <string name="dream_details_label">DETAILS</string>
    <string name="dream_realized_label">Realized</string>
    <string name="dream_deferred_label">Deferred</string>
    <string name="deferred">Deferred</string>
    <string name="realized">Realized</string>

    <string name="details">DETAILS</string>
    <string name="enter_a_title_for_the_dream">Enter a title for the dream</string>
    <string name="title">TITLE</string>
    <string name="dream_revealed">DREAM REVEALED</string>


    <string name="dream_done">DREAM DONE</string>
    <string name="default_date">Wed Nov 14 11:56 EST 2018</string>
    <string name="Revealed">DREAM REVEALED</string>
    <string name="Realized">DREAM REALIZED</string>
    <string name="Deferred">DREAM DEFERRED</string>


    <string name="new_dream">New Dream</string>
    <string name="all_dreams">All Dreams</string>
    <string name="active_dreams">Active Dreams</string>
    <string name="realized_dreams">Realized Dreams</string>
    <string name="deferred_dreams">Deferred Dreams</string>
    <string name="dream_list_selection">Dream List Selection</string>
    <string name="dream_photo">Dream Photo</string>
    <string name="dream_icon">Dream Icon</string>
    <string name="share">Share Dream</string>
    <string name="take_photo">Take Photo</string>
    <string name="all_dreams_title">All Dreams</string>
    <string name="active_dreams_title">Active Dreams</string>
    <string name="realized_dreams_title">Realized Dreams</string>
    <string name="deferred_dreams_title">Deferred Dreams</string>
    <string name="drawer_image">Drawer Image</string>
    <string name="enter_a_comment">Enter a comment</string>
</resources>
