<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/nav_header">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_all_dreams"
            android:icon="@drawable/ic_menu_label_outline"
            android:title="@string/all_dreams_title" />
        <item
            android:id="@+id/nav_active_dreams"
            android:icon="@drawable/ic_menu_label_outline"
            android:title="@string/active_dreams_title" />
        <item
            android:id="@+id/nav_realized_dreams"
            android:icon="@drawable/ic_menu_label_outline"
            android:title="@string/realized_dreams_title" />
        <item
            android:id="@+id/nav_deferred_dreams"
            android:icon="@drawable/ic_menu_label_outline"
            android:title="@string/deferred_dreams_title" />

    </group>
</menu>