<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dream_title_label"/>

    <EditText
        android:id="@+id/dream_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dream_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dream_details_label"/>

    <Button
        android:id="@+id/dream_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/default_date"/>

    <CheckBox
        android:id="@+id/dream_realized"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dream_realized"/>

    <CheckBox
        android:id="@+id/dream_deferred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dream_realized"/>

</LinearLayout>