<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:paddingLeft="8dp"
    android:paddingTop="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/dream_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="monospace"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dream_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_a_title_for_the_dream" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/dream_realized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#03A9F4"
            android:text="@string/realized" />

        <Space
            android:layout_width="167dp"
            android:layout_height="32dp"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/dream_deferred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#03A9F4"
            android:text="@string/deferred" />
    </LinearLayout>

    <TextView
        android:id="@+id/dream_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="monospace"
        android:text="@string/details"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:padding="8dp">

        <Button
            android:id="@+id/dream_entry_0_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="#FF5722"
            android:text="@string/dream_revealed" />

        <Button
            android:id="@+id/dream_entry_1_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/dream_entry_1" />

        <Button
            android:id="@+id/dream_entry_2_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/dream_entry_2" />

        <Button
            android:id="@+id/dream_entry_3_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/dream_entry_3" />

        <Button
            android:id="@+id/dream_entry_4_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="#03A9F4"
            android:text="@string/dream_done" />

    </LinearLayout>

</LinearLayout>